<resources>
    <string name="app_name">Taskbox</string>
    <string name="task_detail_hint_text">Remember to&#8230;</string>
    <string name="menu_item_save">Save</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_action_add_sample_data">Add sample data</string>
    <string name="menu_action_delete_all">Delete all</string>
    <string name="tab_item_active">Active</string>
    <string name="tab_item_done">Done</string>
    <string name="menu_item_done">Done</string>
    <string name="menu_item_reactivate">Reactivate</string>
    <string name="tab_item_snoozed">Snoozed</string>
    <string name="menu_item_snooze">Snooze</string>
    <string name="snooze_time_format_today">Today</string>
    <string name="snooze_time_format_tomorrow">Tomorrow</string>
    <string name="snooze_time_picker_morning">Morning</string>
    <string name="snooze_time_picker_afternoon">Afternoon</string>
    <string name="snooze_time_picker_evening">Evening</string>
    <string name="snooze_time_picker_custom_value">Custom</string>
    <string name="snooze_pick_date_time_title">Select date and time</string>
    <string name="snooze_dialog_custom">Custom</string>
    <string name="task_detail_snoozed_until">Snoozed until %1$s</string>
    <string name="action_undo">Undo</string>
    <string name="notification_group_key">home.westering56.taskbox.NOTIFICATION_GROUP_KEY</string>
    <string name="task_status_done">Done</string>
    <string name="menu_action_test_something">Test something</string>
    <string name="task_list_item_repeat_content_description">Repeat symbol</string>
    <string name="custom_snooze_options_dlg_button_save">Save</string>
    <string name="snooze_custom_repeat_dialog_repeat_every">Repeat every</string>
    <string name="snooze_custom_repeat_dialog_repeat_on">Repeat on</string>
    <string name="snooze_custom_repeat_weekly_label_mon">Mon</string>
    <string name="snooze_custom_repeat_weekly_label_tue">Tue</string>
    <string name="snooze_custom_repeat_weekly_label_wed">Wed</string>
    <string name="snooze_custom_repeat_weekly_label_thu">Thu</string>
    <string name="snooze_custom_repeat_weekly_label_fri">Fri</string>
    <string name="snooze_custom_repeat_weekly_label_sat">Sat</string>
    <string name="snooze_custom_repeat_weekly_label_sun">Sun</string>
    <string name="snooze_custom_repeat_dialog_button_done_text">Done</string>
    <string name="custom_spinner_adapter_custom_picker">Custom…</string>
    <string name="repeat_option_does_not_repeat">"Doesn't repeat"</string>
    <string name="repeat_option_daily">Daily</string>
    <string name="repeat_option_weekly">Weekly</string>
    <string name="repeat_option_monthly">Monthly</string>
    <string name="repeat_option_yearly">Yearly</string>
    <string name="snooze_custom_repeat_monthly_same_day">on the same day each month</string>
    <string name="snooze_custom_repeat_monthly_last_day">on the last day of the month</string>
    <!-- "on every third Tuesday". Note last takes precedent over fourth -->
    <string name="snooze_custom_repeat_monthly_nth_day_of_week">on every %1$s %2$s</string>
    <string name="ordinal_fourth">fourth</string>
    <string name="ordinal_third">third</string>
    <string name="ordinal_second">second</string>
    <string name="ordinal_first">first</string>
    <string name="ordinal_last">last</string>
    <string name="task_detail_repeat_icon">Repeat</string>
    <plurals name="repeat_day_label">
        <item quantity="one">day</item>
        <item quantity="other">days</item>
    </plurals>
    <plurals name="repeat_week_label">
        <item quantity="one">week</item>
        <item quantity="other">weeks</item>
    </plurals>
    <plurals name="repeat_month_label">
        <item quantity="one">month</item>
        <item quantity="other">months</item>
    </plurals>
    <plurals name="repeat_year_label">
        <item quantity="one">year</item>
        <item quantity="other">years</item>
    </plurals>
    <string-array name="repeat_weekday_short"><!-- Order by RecurrenceRule.WeekdayNum.ordinal -->
        <item>Sun</item>
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
    </string-array>
    <string-array name="repeat_weekday_long"><!-- Order by RecurrenceRule.WeekdayNum.ordinal -->
        <item>Sunday</item>
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>
</resources>
