<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".TaskDetailActivity"
    tools:showIn="@layout/activity_task_detail">


    <include layout="@layout/task_detail_banner" />


    <EditText
        android:id="@+id/task_detail_summary_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/task_detail_hint_text"
        android:imeOptions="actionDone"
        android:importantForAutofill="no"
        android:inputType="text|textCapSentences|textAutoCorrect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/task_detail_banner">

        <requestFocus />
    </EditText>


</androidx.constraintlayout.widget.ConstraintLayout>